# libpitaya-cpp

./: CMakeLists.txt  Makefile  conanfile.txt
include/: pitaya.h
include/pitaya/: connection.h  exception.h  request.h  tcp_socket.h
include/pitaya/connection/: error.h  event.h  packet_framed.h  packet_stream.h  state.h
include/pitaya/protocol/: message.h  packet.h  request.h
src/: connection.cpp  example.cpp  logger.h  pitaya.cpp  tcp_socket.cpp
src/connection/: error.cpp  state.cpp  tcp_packet_framed.cpp  tcp_packet_framed.h  tcp_packet_stream.cpp  tcp_packet_stream.h
src/protocol/: message.cpp  packet.cpp
src/utils/: gzip.cpp  gzip.h  net.h
test/: tcp_packet_stream_test.cpp
